kv_versioned_docs/version-2.9.0/setup/installing/debian-ubuntu.md
---
title: "Debian and Ubuntu"
sidebar_position: 302
sidebar_label: Debian & Ubuntu
pagination_label: "Debian and Ubuntu"
hide_table_of_contents: true
last_update:
  author: RiakDocs
  date: 2019-11-21
---
import RiakDocsNote from '@site/src/components/RiakDocs/RiakDocsNote';


[install source index]: ./../source
[security index]: ./../../../using/security
[install source erlang]: ./../source/erlang
[install verify]: ./../verify

Riak KV can be installed on Debian or Ubuntu-based systems using a binary
package or by compiling from source code.

The following steps have been tested to work with Riak KV on:

- Ubuntu 18.02
- Ubuntu 16.04
- Ubuntu 14.04
- Ubuntu 12.04
- Debian 9.2
- Debian 8.6
- Debian 7.6
- Raspbian Buster

> **Note on Debian 7**
>
> If you wish to install Riak on Debian 7, you may need to install
[libc6](https://packages.debian.org/search?keywords=libc6) version 2.15 or
later, which in turn requires upgrading your system to
[sid](https://www.debian.org/releases/sid/). Installation instructions
can be found
[here](https://wiki.debian.org/DebianUnstable#How_do_I_install_Sid.3F).
>
> Once sid has been installed, you can install libc6 with the following
command:
>
>```bash
apt-get -t sid install libc6 libc6-dev libc6-dbg
```

## Installing From Package

If you wish to install the deb packages by hand, follow these
instructions.

### Installing on Non-LTS Ubuntu Releases

Typically we only package Riak for LTS releases to keep our build and
testing matrix focused.  In some cases, such as the historic Ubuntu 11.04 (Natty),
there are changes that affect how Riak is packaged, so we will release a
separate package for that non-LTS release. In most other cases, however,
if you are running a non-LTS release (such as 12.10) it is safe to
follow the below instructions for the LTS release prior to your release.
In the case of later subversions such as Ubuntu 12.10, follow the installation instructions for
Ubuntu 12.04.

### PAM Library Requirement for Ubuntu

One dependency that may be missing on your machine is the `libpam0g-dev`
package used for Pluggable Authentication Module (PAM) authentication,
associated with [Riak security][security index].

To install:

```bash
sudo apt-get install libpam0g-dev
```

### Riak 64-bit Installation

#### Ubuntu Bionic Beaver (18.04)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/ubuntu/bionic64/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Ubuntu Xenial Xerus (16.04)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/ubuntu/xenial64/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Ubuntu Trusty Tahr (14.04)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/ubuntu/trusty64/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Ubuntu Precise Pangolin (12.04)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/ubuntu/precise64/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Debian Stretch (9.0)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/debian/9/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Debian Jessie (8.0)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/debian/8/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Debian Wheezy (7.0)

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/debian/7/riak_2.9.0-1_amd64.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

#### Raspbian Buster

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/raspbian/buster/riak_2.9.0-1_armhf.deb
sudo dpkg -i riak_2.9.0-1_amd64.deb
```

## Installing From Source

First, install Riak dependencies using apt:

```bash
sudo apt-get install build-essential libc6-dev-i386 git
```

Riak requires an [Erlang](http://www.erlang.org/) installation.
Instructions can be found in [Installing Erlang][install source erlang].

```bash
wget https://files.tiot.jp/riak/kv/2.9/2.9.0p5/riak-2.9.0.tar.gz
tar zxvf riak-2.9.0.tar.gz
cd riak-2.9.0
make rel
```

If the build was successful, a fresh build of Riak will exist in the
`rel/riak` directory.

## Next Steps

Now that Riak is installed, check out [Verifying a Riak Installation][install verify].
